fix T43094 Added check for out of bounds in vertex color array